fix horizontal scrolling on phone

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,7 @@
 @import "./bootstrap/bootstrap.min.css";
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
